force-app/main/default/objects/Credential__c/fields/Admit_Discharge_Report_Id__c.field-meta.xml
<CustomField>
    <fullName>Admit_Discharge_Report_Id__c</fullName>
    <label>Admit_Discharge_Report_Id</label>
    <length>10</length>
    <type>Text</type>
</CustomField>