force-app/main/default/objects/Credential__c/fields/Clark_Auth_Project_Id__c.field-meta.xml
<CustomField>
    <fullName>Clark_Auth_Project_Id__c</fullName>
    <label>Clark Auth Project Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>