force-app/main/default/objects/Credential__c/fields/Dont_Run_CCM__c.field-meta.xml
<CustomField>
    <fullName>Dont_Run_CCM__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Dont Run CCM</label>
    <type>Checkbox</type>
</CustomField>