force-app/main/default/objects/Credential__c/fields/MFA__c.field-meta.xml
<CustomField>
    <fullName>MFA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MFA</label>
    <type>Checkbox</type>
</CustomField>