force-app/main/default/objects/Credential__c/fields/MFA_Type__c.field-meta.xml
<CustomField>
    <fullName>MFA_Type__c</fullName>
    <label>MFA Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Genesis</fullName>
            </value>
            <value>
                <fullName>PCC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>