force-app/main/default/objects/Credential__c/fields/PCC_Password__c.field-meta.xml
<CustomField>
    <fullName>PCC_Password__c</fullName>
    <label>PCC Password</label>
    <length>255</length>
    <type>Text</type>
</CustomField>