force-app/main/default/objects/Credential__c/fields/PCC_Username__c.field-meta.xml
<CustomField>
    <fullName>PCC_Username__c</fullName>
    <label>PCC Username</label>
    <length>255</length>
    <type>Text</type>
</CustomField>