force-app/main/default/objects/Credential__c/fields/Resident_Report_Type__c.field-meta.xml
<CustomField>
    <fullName>Resident_Report_Type__c</fullName>
    <label>Resident Report Type</label>
    <length>7</length>
    <type>Text</type>
</CustomField>