force-app/main/default/objects/Credential__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>PCC</fullName>
            </value>
            <value>
                <fullName>Matrix</fullName>
            </value>
            <value>
                <fullName>MatrixCare</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>