force-app/main/default/objects/Credential__c/fields/url_Id__c.field-meta.xml
<CustomField>
    <fullName>url_Id__c</fullName>
    <label>url Id</label>
    <length>5</length>
    <type>Text</type>
</CustomField>