force-app/main/default/objects/Credential__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>PCC_Password__c</columns>
    <columns>PCC_Username__c</columns>
    <columns>Resident_Report_Type__c</columns>
    <columns>url_Id__c</columns>
    <columns>Admit_Discharge_Report_Id__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Clark_Auth_Project_Id__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>All</label>
</ListView>